--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,12 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: dbname
+  username: username
+  password: password
+  host: hostip
+  port: 5432
+  pool: 5
+  timeout: 5000
