--- a/config/database.yml
+++ b/config/database.yml
@@ -23,10 +23,10 @@ test:
 production:
   adapter: postgresql
   encoding: unicode
-  database: dbname
-  username: username
-  password: password
-  host: hostip
+  database: <%= ENV["DBNAME"] %>
+  username: <%= ENV["DBUSERNAME"] %>
+  password: <%= ENV["PASSWORD"] %>
+  host: <%= ENV["HOST"] %>
   port: 5432
   pool: 5
   timeout: 5000
